Fix jars not allowing/using Java 8